# reaproof

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
bridge/: reaproof_bridge.lua
docs/: REFERENCE.md  USER_GUIDE.md
examples/: README.md
examples/clap/: build_clap.sh  reaproof_gain.c
examples/jsfx/: ReaProof_Gain.jsfx  ReaProof_Gain_BrokenAngle.jsfx  ReaProof_Gain_BrokenIgnore.jsfx  ReaProof_Gain_BrokenNaN.jsfx  ReaProof_Mute_Button.jsfx
src/reaproof/: __init__.py  authoring.py  determinism.py  mutation.py  paths.py
src/reaproof/control/: __init__.py  bridge_client.py
src/reaproof/coverage/: __init__.py  derive.py  taxonomy.py
src/reaproof/observe/: __init__.py  input.py
src/reaproof/observe/audio/: __init__.py  analysis.py  render.py  (+1 more)
src/reaproof/provision/: __init__.py  base.py  linux.py  macos.py  plugin_cache.py
src/reaproof/report/: __init__.py  provenance.py  results.py
src/reaproof/runner/: __init__.py  autotest.py  cli.py  pytest_plugin.py  quarantine.py  scaffold.py  session.py
src/reaproof/validators/: __init__.py  auval.py  base.py  clap.py  pluginval.py
tests/: _fakebridge.py  conftest.py  test_audio_analysis.py  test_automation_cell.py  test_autotest.py  test_bridge_client.py  test_button_cell.py  test_coverage_cells.py  test_determinism.py  test_mutation.py  test_phase0_gate.py  test_phase1_gate.py  test_phase2_gate.py  test_phase3_gate.py  test_phase4_gate.py  test_phase5_gate.py  test_phase6_gate.py  test_phase7_gate.py  test_plugin.py  test_visual_units.py
(+6 files in other folders)
